--- a/HZC/assets/css/estilo.css
+++ b/HZC/assets/css/estilo.css
@@ -85,10 +85,16 @@ body {
   content:"\e90a";
 }  
 .principal {
-  padding: 24px 16px
+  padding: 24px 16px;
+  display: grid;
+  gap: 16px
 }
 .titulo-pagina {
   font-size: 1.5rem;
+  font-weight: 700
+}
+.titulo-secao {
+  font-size: 1.2rem;
   font-weight: 700
 }
 .cartao {
@@ -97,13 +103,17 @@ body {
   overflow: hidden;
   background-color: #2c343a
 }
+.cartao--principal {
+  margin-bottom: 16px
+}
 .cartao__imagem {
   border: 5px;
 }
 .cartao__conteudo {
   padding: 16px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: auto 1fr;
+  gap: 8px;
 }
 .cartao__destaque {
   grid-column: span 2
@@ -142,6 +152,7 @@ body {
   height: 40px;
   border-radius: 10px;
   font-size: 0.9rem;
+  justify-self: flex-end
 }
 .cartao__botao--play::before {
   content: "\e90b";
@@ -151,6 +162,15 @@ body {
   width: 100%;
   grid-column: span 2
 }
-.cartao__botao--destaque::before {
-  
+.secao {
+  display: grid;
+  gap: 16px
+}
+.cartao__info--moeda::before {
+  content:"\e905";
+  margin-right: 8px
+}
+.cartao__botao--carrinho::before {
+  content: "\e901";
+  font-size: 24px
 }
